Minor UI changes

--- a/lib/l10n/intl_de.arb
+++ b/lib/l10n/intl_de.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "de",
-  "welcome": "Willkommen zu Souffleur",
+  "welcome": "Willkommen",
   "scan": "QR Code scannen",
   "unlink": "Verknüpfung aufheben",
   "enable_shake": "Schütteln einschalten",
