--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,6 @@
   "instructions_01": "If you have not done so already, please visit the website",
   "instructions_02": "with your Linux, macOS, or Windows machine and download the Souffleur server. Please install the software once the download is complete.",
   "instructions_03": "When the Souffler server is installed on your Linux, macOS, or Windows machine, run it and press the Start button in the Souffleur server main window.",
-  "instructions_04": "Tap on the button below this instructions and scan the QR code your Souffleur server is showing on screen."
+  "instructions_04": "Tap on the button below this instructions and scan the QR code your Souffleur server is showing on screen.",
+ "checkClipboard": "Check clipboard for URL"
 }
